--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,13 +34,12 @@ jobs:
         reuse --suppress-deprecation lint
     - name: Install dependencies
       run: |
-        #python3 -m pip install --upgrade pip
-        #cd python
-        #pip install -r requirements.txt
-        #pip install -r requirements-dev.txt
+        python3 -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
     - name: Build
       run:
-        echo "cd python && python3 setup.py build sdist"
+        python3 setup.py build sdist
     - name: Lint
       run: |
         cd python
@@ -50,15 +49,10 @@ jobs:
     - name: Test
       run: |
         JUNIT_REPORT=1 python3 -m pytest
-        make check_license_schema
+        make 
     - name: CLI check
       run: |
-        flame -h
-        flame license BSD3
-        flame compat BSD3
-        flame licenses
-        flame operators
-        flame compats
+        elmat --help
     - name: Publish Test Report
       uses: mikepenz/action-junit-report@v3
       # always run even if the previous step fails but only for the main repo
