--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -39,10 +39,9 @@ jobs:
         python3 setup.py build sdist
     - name: Lint
       run: |
-        cd python
         flake8
     - name: Install
-      run: cd python && python3 setup.py install
+      run: python3 setup.py install
     - name: Test
       run: |
         JUNIT_REPORT=1 python3 -m pytest
