--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,8 @@
 # SPDX-FileCopyrightText: 2023 Henrik Sandklef
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
+
+flake8 ~= 5.0
+reuse
+twine
+pytest
