--- a/setup.cfg
+++ b/setup.cfg
@@ -50,7 +50,7 @@ statistics = False
 
 [tool:pytest]
 addopts =
-    --cov=flame --cov-report term-missing
+    --cov=elmat --cov-report term-missing
     --forked
     --no-header
     --quiet
