args on one line

--- a/setup.cfg
+++ b/setup.cfg
@@ -49,10 +49,4 @@ exclude =
 statistics = False
 
 [tool:pytest]
-addopts =
-    --cov=elmat --cov-report term-missing
-    --forked
-    --no-header
-    --quiet
-    --random-order --random-order-bucket=global
-    --showlocals
+addopts = --cov=elmat  --cov-report term-missing --forked --no-header --quiet --random-order --random-order-bucket=global --showlocals
