--- a/setup.cfg
+++ b/setup.cfg
@@ -49,4 +49,5 @@ exclude =
 statistics = False
 
 [tool:pytest]
-addopts = --cov=elmat  --cov-report term-missing --forked --no-header --quiet --random-order --random-order-bucket=global --showlocals
+addopts = --forked --no-header --quiet  --showlocals
+# --cov=elmat  --cov-report term-missing --random-order --random-order-bucket=global
