--- a/setup.cfg
+++ b/setup.cfg
@@ -49,5 +49,5 @@ exclude =
 statistics = False
 
 [tool:pytest]
-addopts = --forked --no-header --quiet  --showlocals
-# --cov=elmat  --cov-report term-missing --random-order --random-order-bucket=global
+addopts = --no-header --quiet  --showlocals
+#  --forked --cov=elmat  --cov-report term-missing --random-order --random-order-bucket=global
