--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - "main"
-      - "hesa-add-autorelease"
+      - "hesa-add-autorelease-II"
   workflow_dispatch:
     inputs:
       bump-version:
@@ -106,7 +106,6 @@ jobs:
       if: steps.release-needed.outputs.DO_RELEASE == 'true'
       uses: actions-x/commit@v6
       with:
-        token: ${{ secrets.ELMAT_TOKEN }}
         files: ${{ env.VERSION_FILE }} .bumpversion.cfg
         message: 'Release ${{ steps.version-bump.outputs.new_version }}'
 
