--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -108,6 +108,7 @@ jobs:
       with:
         files: ${{ env.VERSION_FILE }} .bumpversion.cfg
         message: 'Release ${{ steps.version-bump.outputs.new_version }}'
+        token: ${{ secrets.ELMAT_TOKEN }}
 
     - name: Create new release
       if: steps.release-needed.outputs.DO_RELEASE == 'true'
