--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -42,8 +42,8 @@ jobs:
           echo "::error ::secrets.PYPI_API_TOKEN needs to be set for this action"
           exit 1
         fi
-        if [ -z "${{ secrets.ELMAT_TOKEN }}" ]; then
-          echo "::error ::secrets.ELMAT_TOKEN needs to be set for this action"
+        if [ -z "${{ secrets.TOKEN }}" ]; then
+          echo "::error ::secrets.TOKEN needs to be set for this action"
           exit 1
         fi
         if [ "${{ github.event_name == 'workflow_dispatch' }}" = "true" ]; then
@@ -108,7 +108,7 @@ jobs:
       with:
         files: ${{ env.VERSION_FILE }} .bumpversion.cfg
         message: 'Release ${{ steps.version-bump.outputs.new_version }}'
-        token: ${{ secrets.ELMAT_TOKEN }}
+        token: ${{ secrets.TOKEN }}
 
     - name: Create new release
       if: steps.release-needed.outputs.DO_RELEASE == 'true'
@@ -116,7 +116,7 @@ jobs:
       with:
         tag: ${{ steps.version-bump.outputs.new_version }}
         generateReleaseNotes: true
-        token: ${{ secrets.ELMAT_TOKEN }}
+        token: ${{ secrets.TOKEN }}
 
     - name: Publish package
       if: steps.release-needed.outputs.DO_RELEASE == 'true' && env.PYPI_PUBLISH == '1'
