--- a/.github/workflows/autorelease.yml
+++ b/.github/workflows/autorelease.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - "main"
-      - "hesa-add-autorelease-II"
+      - "hesa-add-autorelease-III"
   workflow_dispatch:
     inputs:
       bump-version:
